--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,4 +1,5 @@
 .container {
+  margin-top: 2rem;
   padding: 0 2rem;
 }
 
@@ -106,6 +107,10 @@
 .logo {
   height: 1em;
   margin-left: 0.5rem;
+}
+
+.pre {
+  text-align: center;
 }
 
 @media (max-width: 600px) {
